--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
 
   flutter:
+  
     sdk: flutter
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
@@ -40,9 +41,11 @@ dependencies:
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
+  google_nav_bar: ^5.0.6  # check for latest version
 
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
