--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-
+  audioplayers: ^5.2.1
+ 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -66,6 +67,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+
+  assets:
+    - assets/music/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
